# nvidia_chat

./: .env.example  .gitignore  .slugignore  ACCELERATION_SUMMARY.md  DEPLOY.md  FINAL_PRODUCTION_CERTIFICATE.txt  IMPLEMENTATION_CHECKLIST_COMPLETE.md  INTEGRATION_SUMMARY.md  LICENSE  PRODUCTION_READINESS_COMPLETE.md  Procfile  README.md  SUPERPOSITION_SUMMARY.md  T3_ROADMAP.md  TAEP_IMPLEMENTATION_COMPLETE.md  TESTING_FRAMEWORK_COMPLETE.md  TODAY_IMPLEMENTATION_COMPLETE.md  WAVEFUNCTION_COLLAPSE_DEMO_RESULTS.md  add_deriv_quick.py  add_mt5_quick.py  app.json  bot_server.py  chat.py  conftest.py  first_principles_analysis_ OF the system  generate_demo_report.py  launch_mt5_auto.py  manage_brokers.py  netlify.toml  performance_benchmark.py  pyproject.toml  requirements.txt  run_all_tests.py  run_demo_trading.py  run_full_validation.py  setup_credentials.py  start_paper_trading.py  telegram_bot.py  telegram_bot_full.py  test_accelerated_path_integral.py  (+15 more)
.claude/: settings.local.json
.github/agents/: trading-logic-reviewer.agent.md
.github/instructions/: kluster-code-verify.instructions.md
.github/workflows/: rootfile-runtime.yml
apps/: __init__.py
apps/telegram/: __init__.py  _rootfile_enforcement.py  bot_server.py  chat.py  (+3 more)
backend_api/: __init__.py  dashboard.py  telegram.py
config/: operator_meta_schema.json
core/: __init__.py
data_core/: __init__.py
docs/: API.md  ARCHITECTURE.md  TUTORIAL.md
infra/: __init__.py
registry/: __init__.py  design_tensor_map.json  module_map.json  system_invariants.json
scripts/: __init__.py
tachyonic_chain/: __init__.py  audit_log.py  evidence.py
taep/: __init__.py
tests/: __init__.py
tools/: __init__.py  file_validator.py  import_check.py  kernel_law_validator.py  token_flow_validator.py
trading/: __init__.py  backtest_logger.py  paper_trading_loop.py  taep_bridge.py  taep_pipeline.py  taep_shadow.py
trading/accelerated/: BUILD_GUIDE.md  WINDOWS_BUILD_FIX.md  __init__.py  _operators.c  _operators.html  _operators.pyx  _path_integral.c  _path_integral.html  _path_integral.pyx  backend_selector.py  build_windows.bat  mojo_bridge.py  pyproject.toml  setup.py
trading/accelerated/mojo/core/: trajectory_engine.mojo
validation/: __init__.py
(+219 files in other folders)
