[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexquantumict"
version = "2.0.0"
description = "ApexQuantumICT trading engine with TAEP governance, market geometry, broker integrations, and Telegram controls"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "torch>=2.11.0",
    "cryptography>=41.0.0",
    "keyring>=24.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]
accel = [
    "cython>=3.0.0",
    "numba>=0.58.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "taep*",
    "trading*",
    "apps*",
    "scripts*",
    "core*",
    "data_core*",
    "backend_api*",
    "tachyonic_chain*",
    "tools*",
    "infra*",
    "registry*",
]

[tool.setuptools.package-data]
taep = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
