[build-system]
requires = ["setuptools>=45", "cython>=3.0.0", "numpy>=1.24.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apexquantumict-accelerated"
version = "1.0.0"
description = "Cython-accelerated components for ApexQuantumICT"

[tool.setuptools]
py-modules = ["_path_integral", "_operators"]
